mywork/force-app/main/default/objects/Scratch_Org__c/Scratch_Org__c.object-meta.xml
<CustomObject>
    <label>Scratch Org</label>
    <pluralLabel>Scratch Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Scratch Org Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>