mywork/force-app/main/default/objects/Scratch_Org__c/fields/Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog Item</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Scratch Orgs</relationshipLabel>
    <relationshipName>Scratch_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>