mywork/force-app/main/default/objects/Scratch_Org__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <description>The amount of days the scratch org should last</description>
    <inlineHelpText>The amount of days the scratch org should last</inlineHelpText>
    <label>Duration in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>