mywork/force-app/main/default/objects/Scratch_Org__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration date of scratch org</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>