mywork/force-app/main/default/objects/Scratch_Org__c/fields/Parent_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Branch_Name__c</fullName>
    <description>Name of the branch used to create the branch for this scratch org</description>
    <inlineHelpText>Name of the branch used to create the branch for this scratch org</inlineHelpText>
    <label>Parent Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>