mywork/force-app/main/default/objects/Scratch_Org__c/fields/Repository_Location__c.field-meta.xml
<CustomField>
    <fullName>Repository_Location__c</fullName>
    <label>Repository Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>