mywork/force-app/main/default/objects/Scratch_Org__c/fields/Scratch_Org_Definition__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The scratch org definition used to create this scratch org</description>
    <label>Scratch Org Definition</label>
    <referenceTo>Scratch_Org_Definition__c</referenceTo>
    <relationshipLabel>Scratch Orgs</relationshipLabel>
    <relationshipName>Scratch_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>