mywork/force-app/main/default/objects/Scratch_Org__c/fields/Scratch_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Id__c</fullName>
    <description>the Id of the scratch org in the dev hub org</description>
    <label>Scratch Org Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>