mywork/force-app/main/default/objects/Scratch_Org__c/fields/VC_Repository__c.field-meta.xml
<CustomField>
    <fullName>VC_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository</label>
    <referenceTo>VC_Repository__c</referenceTo>
    <relationshipLabel>Scratch Orgs</relationshipLabel>
    <relationshipName>Scratch_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>